--- a/sections/methodology.tex
+++ b/sections/methodology.tex
@@ -42,7 +42,7 @@ where $b$ is the linear bias (dashed curve in Figure \ref{fig:nz}), $D$ represen
 \Delta b = b_{\phi}(z) \fnl \frac{3 \Omega_{m} H^{2}_{0}}{2 k^{2}T(k)D(z) c^{2}} \frac{g(\infty)}{g(0)},
 \label{eq:scaledepbias}
 \end{equation}
-where $\Omega_{m}$ is the matter density, $H_{0}$ is the Hubble constant\footnote{$H_{0}=100~({\rm km}~{\rm s}^{-1})/(h^{-1}{\rm Mpc})$ and $k$ is in unit of $h {\rm Mpc}^{-1}$}, $T(k)$ is the transfer function, and $g(\infty)/g(0) \sim 1.3$ with $g(z)\equiv (1+z) D(z)$ is the growth suppression due to non-zero $\Lambda$ because of our normalization of $D$ \citep[see, e.g.,][]{2010JCAP...07..013R, 2019MNRAS.485.4160M}. Assuming the universality relation, $b_{\phi} = 2 \delta_{c}(b - p)$, where $p=1$ and $\delta_{c}= 1.686$ is the critical density for spherical collapse \citep{fillmore1984self}. Provided that the uncertainty on $b_{\phi}$ only impacts the error on $\fnl$, and not the maximum likelihood estimate, we fix $p=1$ in our analysis for our sample of DESI LRG targets \citep[see, also,][]{slosar2008constraints,2010JCAP...07..013R,2013MNRAS.428.1116R}. We do not marginalize over $p$ to avoid parameter-space projection effects \citep{2022JCAP...11..013B}.
+where $\Omega_{m}$ is the matter density, $H_{0}$ is the Hubble constant\footnote{$H_{0}=100~({\rm km}~{\rm s}^{-1})/(h^{-1}{\rm Mpc})$ and $k$ is in unit of $h {\rm Mpc}^{-1}$}, $T(k)$ is the transfer function, and $g(\infty)/g(0) \sim 1.3$ with $g(z)\equiv (1+z) D(z)$ is the growth suppression due to non-zero $\Lambda$ because of our normalization of $D$ \citep[see, e.g.,][]{2010JCAP...07..013R, 2019MNRAS.485.4160M}. \mr{We assume the universality relation which directly relates $b_\phi$ to $b$ via $b_{\phi} = 2 \delta_{c}(b - p)$ with $\delta_{c}= 1.686$ representing the critical density for spherical collapse \citep{fillmore1984self}. We fix $p=1$ in our analysis and marginalize over b \citep[see, also,][]{slosar2008constraints,2010JCAP...07..013R,2013MNRAS.428.1116R}}. \mout{Assuming the universality relation, $b_{\phi} = 2 \delta_{c}(b - p)$, where $p=1$ and $\delta_{c}= 1.686$ is the critical density for spherical collapse} \citep{fillmore1984self}.\mout{Provided that the uncertainty on $b_{\phi}$ only impacts the error on $\fnl$, and not the maximum likelihood estimate, we fix $p=1$ in our analysis for our sample of DESI LRG targets} \citep[see, also,][]{slosar2008constraints,2010JCAP...07..013R,2013MNRAS.428.1116R}. \mout{We do not marginalize over $p$ to avoid parameter-space projection effects} \citep{2022JCAP...11..013B}.
 
 \begin{figure}
 \centering
@@ -93,10 +93,9 @@ where $\Theta$ represents a container for the parameters $\fnl$, $b$, and $N_{\r
 
 \subsection{Characterization of remaining systematics}
 \label{ssec:characterization}
-%\mc{Edmond: compute these for each sub-survey.} 
-One potential problem that can arise in the data-driven mitigation approach is \textit{over-correction}, which occurs when the corrections applied to the data remove the clustering signal and induce additional biases in the inferred parameter. The neural network approach is more prone to this issue compared to the linear approach, due to the increased degree of freedom. As illustrated in the bottom panel of Figure \ref{fig:pcc}, the significant correlations among the imaging systematic maps may pose additional challenges for modeling the spurious fluctuations in the galaxy density field. Specifically, using highly correlated imaging systematic maps increases the statistical noise in the imaging weights, which elevates the potential for over subtracting the clustering power. These over-correction effects are estimated to have a negligible impact on Baryon Acoustic Oscillations \citep{merz2021clustering}; however, they can significantly modulate the galaxy power spectrum on large scales, and thus lead to biased $\fnl$ constraints \citep{rezaie2021primordial, mueller2022primordial}. Although not explored thoroughly, the over-correction issues could limit the detectability of primordial features in the galaxy power spectrum and that of parity violations in higher order clustering statistics \citep{beutler2019primordial, cahn2021test, philcox2022probing}. Therefore, it is crucial to develop, implement, and apply techniques to minimize and control over-correction, e.g., via dimensionality reduction techniques, in the hope of ensuring that the constraints are as accurate and reliable as possible. 
+\mr{One potential problem that can arise in the data-driven mitigation approach is \textit{over-correction}, which occurs when the corrections applied to the data remove the clustering signal and induce additional biases in the inferred parameter}. The neural network approach is more prone to this issue compared to the linear approach, due to the increased degree of freedom. \mr{As illustrated in the bottom panel of Figure \ref{fig:pcc}, the significant correlations among the imaging systematic maps may pose additional challenges for modeling the spurious fluctuations in the galaxy density field. Specifically, using highly correlated imaging systematic maps increases the statistical noise in the imaging weights, which elevates the potential for over subtracting the clustering power.} These over-correction effects \mr{are estimated to} have a negligible impact on Baryon Acoustic Oscillations \citep{merz2021clustering}; however, they can significantly modulate the galaxy power spectrum on large scales, and thus lead to biased $\fnl$ constraints \citep{rezaie2021primordial, mueller2022primordial}. Although not explored thoroughly, the over-correction issues could limit the detectability of primordial features in the galaxy power spectrum and that of parity violations in higher order clustering statistics \citep{beutler2019primordial, cahn2021test, philcox2022probing}. \mr{Therefore, it is crucial to develop, implement, and apply techniques to minimize and control over-correction in the hope of ensuring that the constraints are as accurate and reliable as possible; one such approach is to reduce the dimensionality of the problem}. 
 
-Our goal is to reduce the correlations between the DESI LRG target density and the imaging systematic maps, while controlling the over-correction effect.  In \S \ref{ssec:characterization}, we describe how we achieve this objective, by employing a series of simulations along with statistical methods that involve calculating the cross power spectrum between the LRG density and imaging maps, and the mean LRG density as a function of imaging. We test different sets of the imaging systematic maps to identify the optimal set:
+Our goal is to reduce the correlations between the DESI LRG target density and the imaging systematic maps, while controlling the over-correction effect.  \mr{In \S \ref{ssec:characterization}, we describe how we achieve this objective, by employing a series of simulations along with the residual systematics that we construct based on the cross power spectrum between the LRG density and imaging maps, and the mean LRG density as a function of imaging. We test different sets of the imaging systematic maps to identify the optimal set of the feature maps}:
 \begin{enumerate}[itemindent=*]
 \item \textbf{Two maps}: Extinction, depth in z.
 \item \textbf{Three maps}: Extinction, depth in z, psfsize in r.
@@ -165,7 +164,7 @@ and the total residual error as,
 \end{equation}
 where the covariance matrix $\mathbb{C}_{\delta} = < \delta_{X} \delta_{X}>$ is constructed from the lognormal mocks. Figure \ref{fig:nbarmock} shows the mean density contrast against the imaging properties for the DESI LRG targets. The dark and light shades represent the $1\sigma$ level fluctuations observed in 1000 lognormal density fields respectively with $\fnl=0$ and $76.9$. The DESI LRG targets before treatment (solid curve) exhibits a strong trend around $10\%$ against the z-band depth which is consistent with the cross power spectrum. Additionally, there are significant spurious trends against extinction and stellar density at about $5-6\%$. The linear approach is able to mitigate most of the systematic fluctuations with only extinction and depth in the z-band as input; however,  a new trend appears against the r-band psfsize map with the \textit{linear two maps} approach (dot-dashed blue curve), which is indicative of the psfsize-related systematics in our sample. This finding is in agreement with the cross power spectrum. We re-train the linear model with three maps, but we still observe around $2\%$ residual spurious fluctuations in the low ends of depth and psfsize, in the z band, which implies nonlinear systematic effects exist. We find that the imaging weights from the nonlinear model trained with the three identified maps (or four maps including the stellar density) is capable of reducing the fluctuations below $2\%$. Even with the nonlinear three maps, we have about $1\%$ remaining systematic fluctuations against the z-band psfsize. We use the $\chi^{2}$ statistics to assess how significant these fluctuations are in comparison to the clean mocks. 
 
-Figure \ref{fig:chi2test} shows the $\chi^{2}$ histograms from the normalized cross spectrum (top) and mean density contrast (bottom) statistics which are obtained from the $\fnl=0$ and $76.9$ lognormal mocks, respectively with solid and dashed lines. The $\chi^{2}$ tests prove to be insensitive to the true $\fnl$ of the mocks, as we obtain consistent distributions for both statistics, regardless of the true $\fnl$ used for the mock generation. No mitigation is applied to these mocks, and thus the $\chi^{2}$ values are expected to be unbiased. The $\chi^{2}$ values observed in the DESI LRG targets are shown via the vertical lines for comparison, and summarized in Table \ref{tab:chi2test}. The corresponding $p$-values are inferred from the comparison to the clean $\fnl=0$ mocks. Before cleaning, our LRG sample has a cross power spectrum $\chi^{2}$ error of $20014.8$. After correction with the linear two maps approach, the cross spectrum $\chi^{2}$ is reduced to $375.1$ with $p$-value $=0.0$. Adding the r-band psfsize, the linear three maps approach reduces the $\chi^{2}$ down to $195.9$ with $p$-value $=0.04$; however, we can reject the null hypothesis that our sample with the linear three maps is properly cleaned at $95\%$ confidence. Even though cleaning with linear all maps gives the lowest cross spectrum $\chi^{2}$ of $129.2$ (and $p$-value $=0.24$), it potentially makes the analysis more prone to regressing out the true clustering signal, given the inner correlations among the imaging properties (Figure \ref{fig:pcc}). As an alternative, we apply the imaging weights from the nonlinear method with the extinction, z-band depth, and r-band psfsize maps (\textit{nonlinear three maps}). The cross power spectrum $\chi^{2}$ is reduced to $79.3$ with $p$-value $=0.59$. Adding the stellar density map reduces the cross power spectrum $\chi^{2}$ error to $70.9$ ($p$-value $=0.69$). Our cross power spectrum diagnostic supports the idea that a nonlinear cleaning approach is needed to properly regress out the remaining spurious fluctuations. We investigate the test with the cross power spectrum up to higher multipoles but find no evidence of remaining systematic errors (see Appendix \ref{sec:scalesys}). 
+\mc{DH: nothing incorrect here (apart from the comment just above), but the text just seems tedious and maybe repetitive, with lots of numbers thrown around. It would be good to give it a more streamlined rewrite. Lines 798-808 are particularly in need of a reform}. Figure \ref{fig:chi2test} shows the $\chi^{2}$ histograms from the normalized cross spectrum (top) and mean density contrast (bottom) statistics which are obtained from the $\fnl=0$ and $76.9$ lognormal mocks, respectively with solid and dashed lines. The $\chi^{2}$ tests prove to be insensitive to the true $\fnl$ of the mocks, as we obtain consistent distributions for both statistics, regardless of the true $\fnl$ used for the mock generation. No mitigation is applied to these mocks, and thus the $\chi^{2}$ values are expected to be unbiased. The $\chi^{2}$ values observed in the DESI LRG targets are shown via the vertical lines for comparison, and summarized in Table \ref{tab:chi2test}. The corresponding $p$-values are inferred from the comparison to the clean $\fnl=0$ mocks. Before cleaning, our LRG sample has a cross power spectrum $\chi^{2}$ error of $20014.8$. After correction with the linear two maps approach, the cross spectrum $\chi^{2}$ is reduced to $375.1$ with $p$-value \mr{$< 0.001$}. Adding the r-band psfsize, the linear three maps approach reduces the $\chi^{2}$ down to $195.9$ with $p$-value $=0.04$; however, we can reject the null hypothesis that our sample with the linear three maps is properly cleaned at $95\%$ confidence. Even though cleaning with linear all maps gives the lowest cross spectrum $\chi^{2}$ of $129.2$ (and $p$-value $=0.24$), it potentially makes the analysis more prone to regressing out the true clustering signal, given the inner correlations among the imaging properties (Figure \ref{fig:pcc}). As an alternative, we apply the imaging weights from the nonlinear method with the extinction, z-band depth, and r-band psfsize maps (\textit{nonlinear three maps}). The cross power spectrum $\chi^{2}$ is reduced to $79.3$ with $p$-value $=0.59$. Adding the stellar density map reduces the cross power spectrum $\chi^{2}$ error to $70.9$ ($p$-value $=0.69$). Our cross power spectrum diagnostic supports the idea that a nonlinear cleaning approach is needed to properly regress out the remaining spurious fluctuations. We investigate the test with the cross power spectrum up to higher multipoles but find no evidence of remaining systematic errors (see Appendix \ref{sec:scalesys}). 
 
 
 
@@ -179,9 +178,9 @@ Figure \ref{fig:chi2test} shows the $\chi^{2}$ histograms from the normalized cr
       \multicolumn{2}{c}{\textbf{Cross Spectrum}} \\
     & $\chi^{2}$ & $p$-value & $\chi^{2}$ & $p$-value \\
     \hline
-   No Weight & 679.8 & 0 & 20014.8 & 0 \\
-   Linear Two Maps & 178.8 & 0 & 375.1 & 0\\
-   Linear Three Maps & 130 & 0 & 195.9 & 0.04\\
+   No Weight & 679.8 & < 0.001 & 20014.8 & < 0.001 \\
+   Linear Two Maps & 178.8 & < 0.001 & 375.1 & < 0.001\\
+   Linear Three Maps & 130 & < 0.001 & 195.9 & 0.04\\
    Linear Eight Maps & 90 & 0.08 & 129.2 & 0.24\\
    Nonlinear Three Maps & 74.3 & 0.39  & 79.3 & 0.59\\
    Nonlinear Four Maps & 73.2 & 0.42 & 70.9 & 0.69\\    
@@ -191,15 +190,15 @@ Figure \ref{fig:chi2test} shows the $\chi^{2}$ histograms from the normalized cr
 
 
 %\mc{Ashley: Add something at the end to clarify the reason that the extinction map can cause the stellar density trend is that they are strongly correlated.} 
-Figure \ref{fig:chi2test} (bottom) shows the mean density $\chi^{2}$ observed in the mocks with or without $\fnl$. Similar to the cross power spectrum test, we find consistent results for the mean density diagnostic regardless of the underlying true $\fnl$, which supports that our diagnostic is not sensitive to the fiducial cosmology. The values measured in the DESI LRG targets before and after applying imaging weights are shown via the vertical lines for comparison, and summarized in Table \ref{tab:chi2test}. The \textit{linear two maps} weights reduce the $\chi^{2}$ value from $679.8$ (before correction) to $178.8$. The $p$-value $=0$ indicates severe remaining systematic effects. Adding the r-band psfsize reduces the error to $\chi^{2}=130$ but the remaining systematics remain statistically significant with $p$-value $=0$. Training the linear model with all imaging systematic maps returns a more reasonable $\chi^{2}=90$ and $p$-value of $0.08$. However, as noted earlier, regression with all imaging systematic maps as input can lead to the removal of the true clustering signal. On the other hand, we obtain a $\chi^{2}$ value of $74.3$ with $p$-value $=0.39$ with the imaging weights from the \textit{nonlinear three maps} approach. Re-training the nonlinear approach while adding the stellar density map (\textit{nonlinear four maps}) yields minor improvement: $\chi^{2}=73.2$ and $p$-value $=0.42$. The minor impact on $\chi^{2}$ indicates that the stellar density trend in the mean LRG density can be explained via extinction because of the strong correlation between these two properties, such that in regions with high stellar density, there is likely to be a higher concentration of dust, which can cause greater extinction of light.
+Figure \ref{fig:chi2test} (bottom) shows the mean density $\chi^{2}$ observed in the mocks with or without $\fnl$. Similar to the cross power spectrum test, we find consistent results for the mean density diagnostic regardless of the underlying true $\fnl$, which supports that our diagnostic is not sensitive to the fiducial cosmology. The values measured in the DESI LRG targets before and after applying imaging weights are shown via the vertical lines for comparison, and summarized in Table \ref{tab:chi2test}. The \textit{linear two maps} weights reduce the $\chi^{2}$ value from $679.8$ (before correction) to $178.8$. The $p$-value $<0.001$ indicates severe remaining systematic effects. Adding the r-band psfsize reduces the error to $\chi^{2}=130$ but the remaining systematics remain statistically significant with $p$-value $<0.001$. Training the linear model with all imaging systematic maps returns a more reasonable $\chi^{2}=90$ and $p$-value of $0.08$. However, as noted earlier, regression with all imaging systematic maps as input can lead to the removal of the true clustering signal. On the other hand, we obtain a $\chi^{2}$ value of $74.3$ with $p$-value $=0.39$ with the imaging weights from the \textit{nonlinear three maps} approach. Re-training the nonlinear approach while adding the stellar density map (\textit{nonlinear four maps}) yields minor improvement: $\chi^{2}=73.2$ and $p$-value $=0.42$. The minor impact on $\chi^{2}$ indicates that the stellar density trend in the mean LRG density can be explained via extinction because of the strong correlation between these two properties, such that in regions with high stellar density, there is likely to be a higher concentration of dust, which can cause greater extinction of light.
 
 
 
 %\mc{Ashley: I would maybe add a new subsubsection (but at least a new paragraph) to summarize the results of the subsection, as they are quite important. This is also where I would discuss the tests that were done prior to looking at the data Cell. The discussion would basically provide a strong justification for the 3 map case being the fiducial case and point out that this was decided prior to seeing the data results. (Some of the words you wrote at the beginning of section 3.5 would go instead in this summary.)}
-The mean density contrast and cross power spectrum tests presented here show the effectiveness of the different cleaning approaches for the LRG sample before measuring the galaxy power spectrum and using it to constrain $\fnl$. In other words, none of these tests require unblinding the measured power spectrum or $\fnl$ constraints. As summarized in Table \ref{tab:chi2test}, the results of these tests reveal that cleaning the LRG sample with nonlinear three maps produces statistically consistent $\chi^{2}$ values with the clean mocks, regardless of the true $\fnl$ used in the generation of the mocks. Moreover, we should not select the model with four maps, which includes stellar density, as our best model to avoid the confirmation bias, since we do not have other indicators showing this model is more reasonable than the one with three maps. On the other hand, the linear three maps approach is not able to thoroughly mitigate systematics, as characterised by $p$-value $=0$ and $=0.04$, respectively, for the mean density and cross power spectrum diagnostics. Based on these findings, we identify nonlinear three maps as the optimal cleaning approach for the LRG sample and the rest of this manuscript, because including any additional imaging systematics maps could potentially further complicate the over-correction issue.
+The mean density contrast and cross power spectrum tests presented here show the effectiveness of the different cleaning approaches for the LRG sample before measuring the galaxy power spectrum and using it to constrain $\fnl$. In other words, none of these tests require unblinding the measured power spectrum or $\fnl$ constraints. As summarized in Table \ref{tab:chi2test}, the results of these tests reveal that cleaning the LRG sample with nonlinear three maps produces statistically consistent $\chi^{2}$ values with the clean mocks, regardless of the true $\fnl$ used in the generation of the mocks. Moreover, we should not select the model with four maps, which includes stellar density, as our best model to avoid the confirmation bias, since we do not have other indicators showing this model is more reasonable than the one with three maps. On the other hand, the linear three maps approach is not able to thoroughly mitigate systematics, as characterised by $p$-value \mr{$< 0.001$} and $=0.04$, respectively, for the mean density and cross power spectrum diagnostics. Based on these findings, we identify nonlinear three maps as the optimal cleaning approach for the LRG sample and the rest of this manuscript, because including any additional imaging systematics maps could potentially further complicate the over-correction issue.
 
 
-\subsection{Calibration of mitigation bias}\label{ssec:calibration}
+\subsection{Calibration of \mr{over-correction} \mout{mitigation bias}}\label{ssec:calibration}
 
 %\mc{Santi: How all of this was computed did not seem very clear to me. It seems that this part is what later determines that fnl!=0 from the data. So I think it would be worth explaining it more. Ashley: I would find a way to *strongly* emphasize that the result does not depend at all on how the mocks were contaminated. Perhaps just a concluding sentence or two in its own paragraph along the lines. Ashley: It is important to note that we find nearly identical results for the mitigation bias whether or not the mocks have any contamination. This can be seen by observing the solid and dashed curves displayed on Fig. 9}
 The template-based mitigation of imaging systematics removes some of the true clustering signal, and the amount of the removed signal increases as more maps are used for the regression. We calibrate the over-correction effect using the mocks presented in \S \ref{sec:data}. We applied the neural network model to both the $\fnl=0$ and $76.9$ simulations, with and without imaging systematics, using various sets of imaging systematic maps. Specifically, we consider \textit{nonlinear three maps}, \textit{nonlinear four maps}, and \textit{nonlinear nine maps}. Then, we measure the power spectra from the mocks. We fit both the mean power spectrum and each individual power spectrum from the mocks. Figure \ref{fig:fnlbias} displays a comparison between the estimates of $\fnl$ before and after mitigation for the clean mocks. The best-fitting estimates are represented by the solid curves, and the individual spectra results are displayed as the scatter points. The results from fitting the mean power spectrum of the contaminated mocks are also shown via the dashed curves. We find nearly identical results for the biases caused by mitigation, whether or not the mocks have any contamination, which can be seen by observing the solid and dashed curves displayed on Figure \ref{fig:fnlbias} (see, also, Figure \ref{fig:clmocks}, for a comparison of the mean power spectrum). For clarity, the best-fitting estimates for the individual contaminated data are not shown in the figure.
