--- a/sections/extra.tex
+++ b/sections/extra.tex
@@ -1,11 +1,6 @@
-\section{Redshift uncertainties}
-We use the Early Data Assembly Version 1 (EDA V1) to construct the redshift distribution for the DESI LRG targets. We find that the change in the maximum likelihood estimate of $\fnl$ is negligible, $\Delta \fnl=-1$. Figure \ref{fig:cl_nz} shows the measured power spectrum of the DESI targets and the corresponding best fit theory curves. The variations in $dN/dz$ do not significicantly alter the conclusion of our paper.
-\begin{figure}
-\centering
-\includegraphics[width=0.45\textwidth]{figures/cl_nz.pdf}\caption{The measured power spectrum of the DESI DR9 LRG sample and the best fit theory models using different redshift distributions.}\label{fig:cl_nz}
-\end{figure}
+\section{Extra robustness tests}
 
-\section{Scale dependent systematics}\label{sec:scalesys}
+\subsection{Scale dependent systematics}\label{sec:scalesys}
 Our fiducial cross power spectrum diagnostic uses harmonic modes up to $\ell=20$, which determines the smallest scale used for characterizing residual systematic errors. To investigate the statistical significance of the cross power spectrum $\chi^{2}$, we examine its dependence on the largest harmonic mode $\ell_{\rm max}$. We extend $\ell_{\rm max}=20$ to $100$, which corresponds to density fluctuations on scales smaller than $2$ degrees. Figure \ref{fig:chi2cellextend} shows the median of the cross power spectrum $\chi^{2}$ from the clean $\fnl=0$ mocks as the highest mode $\ell_{\rm max}$ increases from $20$ to $100$ (represented by the solid line). The red circles and blue crosses show the chi2 values for our sample cleaned respectively with the linear and neural network approaches, both with \textit{three maps}. Overall, we find that for all scales up to $\ell=100$, the nonlinear three maps approach yields consistent values with the clean mocks, whereas linear three maps exhibits significant remaining systematics at more than 95\% confidence.
 
 \begin{figure}
@@ -13,6 +8,29 @@ Our fiducial cross power spectrum diagnostic uses harmonic modes up to $\ell=20$
 \includegraphics[width=0.45\textwidth]{chi2lmax.pdf}
 \caption{The cross power spectrum $\chi^{2}$ between the LRG density and imaging systematic maps as a function of the highest mode $\ell_{\rm max}$ when the sample is cleaned with the linear (triangles) and non-linear (squares) three maps. The lowest mode is fixed at $\ell_{\rm min}=2$. The solid curve and dark (light) shade represent the median value and $68\%$ ($95\%$) confidence regions, estimated from the $\fnl=0$ mocks.}\label{fig:chi2cellextend}
 \end{figure}
+
+
+\subsection{Redshift uncertainties}\label{ssec:nzuncer}
+We use the Early Data Assembly Version 1 (EDA V1) to construct the redshift distribution for the DESI LRG targets. We find that the change in the maximum likelihood estimate of $\fnl$ is negligible, $\Delta \fnl=-1$. Figure \ref{fig:cl_nz} shows the measured power spectrum of the DESI targets and the corresponding best fit theory curves. The variations in $dN/dz$ do not significicantly alter the conclusion of our paper.
+\begin{figure}
+\raggedleft
+\includegraphics[width=0.42\textwidth]{figures/nz_lrg_eda.pdf}
+\includegraphics[width=0.45\textwidth]{figures/cl_nz.pdf}\caption{Top: Redshift distribution of the DESI LRG targets from the EDA V1 and Denali. Bottom: The measured power spectrum of the DESI DR9 LRG sample and the best fit theory models using different redshift distributions.}\label{fig:cl_nz}
+\end{figure}
+
+
+
+
+\subsection{Spurious bump in NGC}\label{ssec:ndecalsbump}
+We realize that the spurious feature at $\ell \sim 10-20$ is removed in the DECaLS South region after mitigation, but ti remains in the BASS+MzLS and DECaLS North. We use the neural networks trained on the DECaLS South with three maps to mitigate the galaxy density in the DECaLS North region, and then measure the power spectrum. Figure \ref{fig:clSonN} shows the power spectrum before treatment (No Weight) and after the nonlinear three maps and nine maps methods for comparison. We find that whatever causing this bump is different between the DECaLS North and South.
+
+\begin{figure}
+    \centering
+    \includegraphics[width=0.45\textwidth]{figures/cl_SonN.pdf}
+    \caption{The unbinned measured power spectrum of the DESI LRG targets in the DECaLS North region before and after various mitigations.}
+    \label{fig:clSonN}
+\end{figure}
+
 
 \section{Lognormal mocks}
 We fit the mean power spectrum of the lognormal mocks to validate the modeling pipeline, and in particular the survey geometry and integral constraint treatments. We investigate the impact of covariance matrix on the inference of $\fnl$. Finally, we show the impact of imaging systematic mitigation and the over-subtraction effect when the cleaning methods are applied to the mocks. 
